# CGRaytracer

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: aabb.h  bvh.h  camera.h  hittable.h  hittable_list.h  image.h  materials.h  misc.h  object_reader.h  ray.h  sphere.h  texture.h  triangle.h
src/: main.cpp
